Refactoring for readability, bug fixes, feature enhancements, optimizations

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,53 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*{ /* Keeps content centered to the page */
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-body { /* Background color */
+body {
     background-color: #d9d9d9;
 }
 
-h1 { /* Head color and size */
+h1 {
     font-size: 1.75rem;
     text-align: center;
     padding: 18px 0;
     color: #565656;
 }
 
-.main-container { /* Controls all 4 containers */
+.main-container {
     display: flex;
     gap: 35px;
     padding: 30px;
+    align-content: center;
 }
 
-.input-container { /* Controls the first container */
-   width: 550px;
-   height: 400px;
-   background-color: #fff;
-   border-radius: 5px;
-   padding: 30px;
-   display: inline-block;
-   text-align: center;
+.input-container {
+    width: 550px;
+    height: 400px;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 30px;
+    display: inline-block;
+    text-align: center;
 }
 
-label { /* Bold Headings */
+label {
     font-weight: bold;
 }
 
 input[type="text"],
 select,
 input[type="number"],
-input[type="date"] { /* Inputs borders */
+input[type="date"] {
     width: 100%;
     padding: 10px 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
-button { /* Button  */
+button {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -59,129 +60,193 @@ button { /* Button  */
     text-align: center;
 }
 
-button:hover { /* Changes Button colors when hovered over */
+button:hover {
     background-color: #0056b3;
 }
 
-.map-container { /* Controls the second container */
-    width: 550px;
-    height: 400px;
-    background-color: #aaa;
-    border-radius: 5px;
-}
-
-.weather-container { /* Controls the weather container */
-    width: 550px;
-    height: 100px;
-    color: #fff;
-    border-radius: 5px 5px 0px 0px;
-    background-color: #007bff;
-    padding: 20px 70px 20px 20px;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
-
-.current-weather h2 {
-    font-weight: 700;
-    font-size: 1.7rem;
-    text-align: center;
-}
-
-.details-container { /* Controls the details container */
+.details-container {
     width: 550px;
     color: #fff;
-    border-radius: 0px 0px 5px 5px;
+    border-radius: 10px;
     background-color: #888;
     text-align: center;
     padding: 20px;
 }
 
-#eventResults { /* Removes bulletens from the <li> */
-    list-style-type: none; /* Remove bullet markers */
+#eventResults {
+    list-style-type: none;
 }
 
-ul { /* Remove bulletens from bring searched */
-    list-style-type: none; /* Remove bullet markers */
+ul {
+    list-style-type: none;
     color: #007bff;
 }
 
-/* The Modal (background) */
+.h3{
+    color: #007bff;
+}
+
+.weather-container {
+    background: #6d6d6d;
+    color: #fff;
+    padding: 2rem;
+    width: 40%;
+    border-radius: 10px;
+    margin: 0 auto;
+    text-align: center; /* Center text elements horizontally */
+}
+.weather-container > * {
+    margin: 0 auto;
+    display: block;
+}
+.weather__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.weather__search {
+    position: relative;
+}
+
+.weather__search i {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    font-size: 15px;
+    color: #fff;
+}
+
+.weather__searchform {
+    background-color: #fff;
+    color: #1e1e1e;
+}
+
+.weather__units {
+    font-size: 1.5rem;
+}
+
+.weather__units span {
+    cursor: pointer;
+}
+
+.weather__units span:first-child {
+    margin-right: 0.5rem;
+}
+
+.weather__body {
+    text-align: center;
+    margin-top: 3rem;
+}
+
+.weather__datetime {
+    margin-bottom: 2rem;
+    font-size: 14px;
+    align-items: center;
+}
+
+.weather__forecast {
+    background: #1e1e1e;
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    border-radius: 30px;
+}
+
+.weather__icon img {
+    width: 100px;
+}
+
+.weather__temperature {
+    font-size: 1.75rem;
+}
+
+.weather__minmax {
+    display: flex;
+    justify-content: center;
+}
+
+.weather__minmax p {
+    font-size: 14px;
+    margin: 0.5rem;
+}
+
+.weather__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3rem;
+}
+
+.weather__card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #007bff;
+    padding: 1rem;
+    border-radius: 10px;
+    margin: 0.5rem;
+}
+
+.weather__card i {
+    font-size: 1.5rem;
+    margin-right: 1rem;
+}
+
+.weather__card p {
+    font-size: 14px;
+}
+
+@media(max-width: 936px){
+    .container {
+        width: 90%;
+    }
+
+    .weather__header {
+        flex-direction: column;
+    }
+
+    .weather__units {
+        margin-top: 1rem;
+    }
+}
+
+@media(max-width: 400px){
+    .weather__info {
+        grid-template-columns: none;
+    }
+}
+/* Modal styles */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; /* Hide the modal by default */
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4); /* Overlay background with a semi-transparent color */
+}
+
+.modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto; /* Center the modal vertically */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
-  /* The Close Button */
-  .close {
+    width: 70%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Close button for the modal */
+.close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover,
+.close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
-
-@media screen and (max-width: 840px){
-    .input-container{
-        width: 250px;
-        padding: 10px;
-    }
-
-    .map-container{
-        width: 250px;
-        padding: 10px;
-    }
-    
-    .weather-container{
-        width: 250px;
-        padding: 10px;
-    }
-    .details-container{
-        width: 250px;
-        padding: 10px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .input-container{
-        width: 100%;
-        display: flex;
-    }
-
-    .map-container{
-        width: 200px;
-        padding: 10px;
-    }
-    
-    .weather-container{
-        width: 200px;
-        padding: 10px;        
-    }
-    .details-container{
-        width: 200px;
-        padding: 10px;
-    }
 }
